All functional req done

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "bootstrap": "^4.4.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "js-cookie": "^2.2.1",
     "mongoose": "^5.9.5",
     "nodemon": "^2.0.2",
     "react": "^16.13.1",
+    "react-alice-carousel": "^1.18.0",
     "react-datepicker": "^2.14.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
@@ -18,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,5 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
